--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,3 +1,186 @@
-.SignUp {
-    text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+*, html, body {
+  margin: 0;
+  padding: 0;
+}
+
+  body {
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    background-image: url("../../logos/HomepageGradiant.png");
+    overflow: hidden;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
   }
+
+  .logocontainer {
+    position: relative;
+    background-image: url("../../logos/HomepageGradiant.png");
+    overflow: hidden;
+    background-size: cover;
+    width: 15vw;
+    height: 15vh;
+    background: rgba(255, 255, 255, 0.712);
+    top: 20%;
+    right: -30%;
+    
+  }
+
+.container {
+  position: relative;
+  top: 15%;
+  left: 55%;
+  width: 35vw;
+  height: 70vh;
+  display: grid;
+  box-shadow: 0 0 17px 10px rgb(0 0 0 / 30%);
+  border-radius: 20px;
+  background: white;
+  overflow: hidden;
+  
+}
+
+.design {
+  grid-area: design;
+  display: none;
+  position: relative;
+}
+
+.rotate-45 {
+  transform: rotate(-45deg);
+}
+
+.design .pill-1 {
+  bottom: 0;
+  left: -40px;
+  position: absolute;
+  width: 80px;
+  height: 200px;
+  background: linear-gradient(#ff0000, #0615ee, #399fff, #ff0000);
+  border-radius: 40px;
+}
+
+.design .pill-2 {
+  top: -100px;
+  left: -80px;
+  position: absolute;
+  height: 450px;
+  width: 220px;
+  background: linear-gradient(#ffffff, #ff0000, #0615ee);
+  border-radius: 200px;
+  border: 30px solid #e4b5e6;
+}
+
+.design .pill-3 {
+  top: -100px;
+  left: 160px;
+  position: absolute;
+  height: 200px;
+  width: 100px;
+  background: linear-gradient(#0615ee, #399fff, #ff0000);
+  border-radius: 70px;
+}
+
+.design .pill-4 {
+  bottom: -180px;
+  left: 220px;
+  position: absolute;
+  height: 300px;
+  width: 120px;
+  background: linear-gradient( #0615ee, #3f88f7,#ff0000, #0615ee);
+  border-radius: 70px;
+}
+
+.login {
+  grid-area: login;
+  top: 22%;
+  left: 7%;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background: white;
+}
+
+.login h3.title {
+  margin: 15px 0;
+  margin-left: 13%;
+  font-size: 40px;
+}
+
+.text-input {
+  background: #e6e6e6;
+  height: 60px;
+  display: flex;
+  width: 60%;
+  align-items: center;
+  border-radius: 10px;
+  padding: 0 25px;
+  margin: 20px 0;
+}
+
+.text-input input {
+  background: none;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  margin-left: 1px;
+}
+
+.text-input i {
+  color: #686868;
+}
+
+::placeholder {
+  color: #9a9a9a;
+}
+
+.login-btn {
+  width: 73%;
+  padding:15px;
+  color: white;
+  background: linear-gradient(to right, #ff966d, #fa538d, #89379c);
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  margin-top: -1px;
+  margin-left: 3px;
+}
+
+a {
+  font-size: 12px;
+  color: #9a9a9a;
+  cursor: pointer;
+  user-select: none;
+  text-decoration: none;
+}
+
+a.forgot {
+  margin-top: 15px;
+}
+
+.create {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 30px;
+}
+
+.create i {
+  color: #9a9a9a;
+  margin-left: 10px;
+}
+
+@media (min-width: 768px) {
+  .container {
+      grid-template-columns: 50% 50%;
+      grid-template-areas: "design login";
+  }
+
+  .design {
+      display: block;
+  }
+}
